force-app/main/default/objects/Account/fields/MDF_Program_SAP_Company_Code__c.field-meta.xml
<CustomField>
    <fullName>MDF_Program_SAP_Company_Code__c</fullName>
    <label>MDF Program SAP Company Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>