force-app/main/default/objects/Account/fields/MDF_Program_Secondary_Contact_1__c.field-meta.xml
<CustomField>
    <fullName>MDF_Program_Secondary_Contact_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MDF Program Secondary Contact 1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Id</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (MDF Program Secondary Contact I)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>