force-app/main/default/objects/Account/fields/MDF_Program_Secondary_Contact_3__c.field-meta.xml
<CustomField>
    <fullName>MDF_Program_Secondary_Contact_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MDF Program Secondary Contact 3</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Id</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (MDF Program Secondary Contact III)</relationshipLabel>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>