force-app/main/default/objects/Account/fields/Merged_Account__c.field-meta.xml
<CustomField>
    <fullName>Merged_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SDS-2054, 1983-Track Merged Entities</description>
    <inlineHelpText>Child Account, Merged Account?</inlineHelpText>
    <label>Merged Account?</label>
    <type>Checkbox</type>
</CustomField>