force-app/main/default/objects/Account/fields/Merged_Fiscal_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Merged_Fiscal_Quarter__c</fullName>
    <description>SDS-2054, 1983-Track Merged Entities</description>
    <inlineHelpText>Child Account, Merged Fiscal Quarter</inlineHelpText>
    <label>Merged Fiscal Quarter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Fiscal_Quarters</valueSetName>
    </valueSet>
</CustomField>