force-app/main/default/objects/Account/fields/Military_Defense__c.field-meta.xml
<CustomField>
    <fullName>Military_Defense__c</fullName>
    <defaultValue>false</defaultValue>
    <description>JIRA #SDS-2126</description>
    <label>Military/Defense</label>
    <type>Checkbox</type>
</CustomField>