force-app/main/default/objects/Account/fields/Month_DocuSign__c.field-meta.xml
<CustomField>
    <fullName>Month_DocuSign__c</fullName>
    <description>This field is being used by the DocuSign Custom Tag &apos;Month_Account_DocuSign&apos; for &quot;DocuSign for Automotive&quot;</description>
    <formula>/*
 TEXT(Month(TODAY()))
*/

CASE(MONTH(TODAY()), 1, &quot;January&quot;, 2, &quot;February&quot;, 3, &quot;March&quot;,  4, &quot;April&quot;,  5, &quot;May&quot;,  6, &quot;June&quot;, 7, &quot;July&quot;, 8, &quot;August&quot;, 9, &quot;September&quot;, 10, &quot;October&quot;, 11, &quot;November&quot;, 12, &quot;December&quot;, &quot;None&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month DocuSign</label>
    <type>Text</type>
</CustomField>