force-app/main/default/objects/Account/fields/National_Partner__c.field-meta.xml
<CustomField>
    <fullName>National_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SDS-1536- Sheng - field used in NPN Pipeline Management Dashboards</description>
    <label>National Partner</label>
    <type>Checkbox</type>
</CustomField>