force-app/main/default/objects/Account/fields/NBU_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>NBU_Account_Number__c</fullName>
    <description>SDS-2496-MLNX and NVDA account reconciliation</description>
    <label>NBU Account Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>