force-app/main/default/objects/Account/fields/NPN_Active_Program_Competency__c.field-meta.xml
<CustomField>
    <fullName>NPN_Active_Program_Competency__c</fullName>
    <description>This field will contain Active NPN Program and Competency from Partner Attribute records. ReadOnly and will be filled from the Partner Attribute records.</description>
    <inlineHelpText>This field will contain Active NPN Program and Competency from Partner Attribute records. ReadOnly and will be filled from the Partner Attribute records.</inlineHelpText>
    <label>NPN Active Program - Competency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>