force-app/main/default/objects/Account/fields/NPN_Partner_Council__c.field-meta.xml
<CustomField>
    <fullName>NPN_Partner_Council__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Confirm if Partner has opted in for Council Membership.</inlineHelpText>
    <label>NPN Partner Council</label>
    <type>Checkbox</type>
</CustomField>