force-app/main/default/objects/Account/fields/NPN_Program_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>NPN_Program_Signed_Date__c</fullName>
    <inlineHelpText>NPN Program Signed Date</inlineHelpText>
    <label>NPN Agreement Date</label>
    <type>Date</type>
</CustomField>