force-app/main/default/objects/Account/fields/NPN_Program_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>NPN_Program_Termination_Date__c</fullName>
    <description>Moved over from Partner Attributes object - 3/20/2016</description>
    <label>NPN Program Termination Date</label>
    <type>Date</type>
</CustomField>