force-app/main/default/objects/Account/fields/NPN_Web_Form_NV_Contact__c.field-meta.xml
<CustomField>
    <fullName>NPN_Web_Form_NV_Contact__c</fullName>
    <description>This field is populated form the NPN web form in response to Who is your NVIDIA Contact? field</description>
    <label>NPN Web Form NV Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>