force-app/main/default/objects/Account/fields/NVIDIA_Rewards__c.field-meta.xml
<CustomField>
    <fullName>NVIDIA_Rewards__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check box if Elite Partner has registered to participate</inlineHelpText>
    <label>NVIDIA Rewards (Elite)</label>
    <type>Checkbox</type>
</CustomField>