force-app/main/default/objects/Account/fields/Oranization_Type__c.field-meta.xml
<CustomField>
    <fullName>Oranization_Type__c</fullName>
    <inlineHelpText>Select the Organization Type that best fits this Account</inlineHelpText>
    <label>Organization (Partner) Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Authorized Board Partner</fullName>
            </value>
            <value>
                <fullName>Cloud Service Provider</fullName>
            </value>
            <value>
                <fullName>Consultant/System Integrator</fullName>
            </value>
            <value>
                <fullName>Corp Reseller/Direct Market Reseller</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Education Services</fullName>
            </value>
            <value>
                <fullName>Etailer</fullName>
            </value>
            <value>
                <fullName>iCafe</fullName>
            </value>
            <value>
                <fullName>Inception Partner (Startup)</fullName>
            </value>
            <value>
                <fullName>ISV</fullName>
            </value>
            <value>
                <fullName>ODM</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Retailer</fullName>
            </value>
            <value>
                <fullName>Solution Advisor</fullName>
            </value>
            <value>
                <fullName>Solution Provider (VAR)</fullName>
            </value>
            <value>
                <fullName>Solutions Integration Partner</fullName>
            </value>
            <value>
                <fullName>Support &amp; Services Delivery Partner</fullName>
            </value>
            <value>
                <fullName>System Builder</fullName>
            </value>
            <value>
                <fullName>Training Center</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Federal Systems Integrator</fullName>
            </value>
            <value>
                <fullName>Global Systems Integrator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>