force-app/main/default/objects/Account/fields/Other_Channel_Programs__c.field-meta.xml
<CustomField>
    <fullName>Other_Channel_Programs__c</fullName>
    <label>Other Channel Programs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>