force-app/main/default/objects/Account/fields/Other_Distribution_Relationships__c.field-meta.xml
<CustomField>
    <fullName>Other_Distribution_Relationships__c</fullName>
    <label>Other Distribution Relationships</label>
    <length>255</length>
    <type>Text</type>
</CustomField>