force-app/main/default/objects/Account/fields/Other_Industries__c.field-meta.xml
<CustomField>
    <fullName>Other_Industries__c</fullName>
    <inlineHelpText>Enter other industries</inlineHelpText>
    <label>Other Industries</label>
    <length>255</length>
    <type>Text</type>
</CustomField>