force-app/main/default/objects/Account/fields/pbk__Business_Status__c.field-meta.xml
<CustomField>
    <fullName>pbk__Business_Status__c</fullName>
    <label>PB Business Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>