force-app/main/default/objects/Account/fields/pbk__Company_Status__c.field-meta.xml
<CustomField>
    <fullName>pbk__Company_Status__c</fullName>
    <label>PB Company Status</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>