force-app/main/default/objects/Account/fields/pbk__Currency__c.field-meta.xml
<CustomField>
    <fullName>pbk__Currency__c</fullName>
    <label>PB Currency</label>
    <length>50</length>
    <type>Text</type>
</CustomField>