force-app/main/default/objects/Account/fields/pbk__Date_of_Last_Round__c.field-meta.xml
<CustomField>
    <fullName>pbk__Date_of_Last_Round__c</fullName>
    <label>PB Date of Last Round</label>
    <type>Date</type>
</CustomField>