force-app/main/default/objects/Account/fields/pbk__Dry_Powder__c.field-meta.xml
<CustomField>
    <fullName>pbk__Dry_Powder__c</fullName>
    <label>PB Dry Powder</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>