force-app/main/default/objects/Account/fields/pbk__Enterprise_Value__c.field-meta.xml
<CustomField>
    <fullName>pbk__Enterprise_Value__c</fullName>
    <label>PB Enterprise Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>