force-app/main/default/objects/Account/fields/pbk__Exchange__c.field-meta.xml
<CustomField>
    <fullName>pbk__Exchange__c</fullName>
    <label>PB Exchange</label>
    <length>20</length>
    <type>Text</type>
</CustomField>