force-app/main/default/objects/Account/fields/pbk__Firm_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>pbk__Firm_Sub_Type__c</fullName>
    <label>PB Firm Sub Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>