force-app/main/default/objects/Account/fields/pbk__Former_Name__c.field-meta.xml
<CustomField>
    <fullName>pbk__Former_Name__c</fullName>
    <label>PB Former Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>