force-app/main/default/objects/Account/fields/pbk__FYE__c.field-meta.xml
<CustomField>
    <fullName>pbk__FYE__c</fullName>
    <label>PB FY End</label>
    <type>Date</type>
</CustomField>