force-app/main/default/objects/Account/fields/pbk__Global_Sub_Region__c.field-meta.xml
<CustomField>
    <fullName>pbk__Global_Sub_Region__c</fullName>
    <label>PB Global Sub Region</label>
    <length>50</length>
    <type>Text</type>
</CustomField>