force-app/main/default/objects/Account/fields/pbk__Industries_All__c.field-meta.xml
<CustomField>
    <fullName>pbk__Industries_All__c</fullName>
    <label>PB Industries (All)</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>