force-app/main/default/objects/Account/fields/pbk__Last_Inv_Date__c.field-meta.xml
<CustomField>
    <fullName>pbk__Last_Inv_Date__c</fullName>
    <label>PB Last Inv Date</label>
    <type>Date</type>
</CustomField>