force-app/main/default/objects/Account/fields/pbk__Last_Inv_Lead_Partner_Email__c.field-meta.xml
<CustomField>
    <fullName>pbk__Last_Inv_Lead_Partner_Email__c</fullName>
    <label>PB Last Inv Lead Partner Email</label>
    <type>Email</type>
</CustomField>