force-app/main/default/objects/Account/fields/pbk__Last_Inv_Lead_Partner_Phone__c.field-meta.xml
<CustomField>
    <fullName>pbk__Last_Inv_Lead_Partner_Phone__c</fullName>
    <label>PB Last Inv Lead Partner Phone</label>
    <type>Phone</type>
</CustomField>