force-app/main/default/objects/Account/fields/pbk__Last_Inv_Name__c.field-meta.xml
<CustomField>
    <fullName>pbk__Last_Inv_Name__c</fullName>
    <label>PB Last Inv Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>