force-app/main/default/objects/Account/fields/pbk__Last_Inv_Primary_Industry__c.field-meta.xml
<CustomField>
    <fullName>pbk__Last_Inv_Primary_Industry__c</fullName>
    <label>PB Last Inv Primary Industry</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>