force-app/main/default/objects/Account/fields/pbk__Last_Inv_Status__c.field-meta.xml
<CustomField>
    <fullName>pbk__Last_Inv_Status__c</fullName>
    <label>PB Last Inv Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>