force-app/main/default/objects/Account/fields/pbk__Last_Round_Size__c.field-meta.xml
<CustomField>
    <fullName>pbk__Last_Round_Size__c</fullName>
    <label>PB Last Round Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>