force-app/main/default/objects/Account/fields/pbk__Last_Round_Valuation__c.field-meta.xml
<CustomField>
    <fullName>pbk__Last_Round_Valuation__c</fullName>
    <label>PB Last Round Valuation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>