force-app/main/default/objects/Account/fields/pbk__Last_Sync_User__c.field-meta.xml
<CustomField>
    <fullName>pbk__Last_Sync_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PB Last Sync User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>