force-app/main/default/objects/Account/fields/pbk__LTM_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>pbk__LTM_Annual_Revenue__c</fullName>
    <label>PB LTM Annual Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>