force-app/main/default/objects/Account/fields/pbk__LTM_EBITDA__c.field-meta.xml
<CustomField>
    <fullName>pbk__LTM_EBITDA__c</fullName>
    <label>PB LTM EBITDA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>