force-app/main/default/objects/Account/fields/pbk__Market_Cap__c.field-meta.xml
<CustomField>
    <fullName>pbk__Market_Cap__c</fullName>
    <label>PB Market Cap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>