force-app/main/default/objects/Account/fields/pbk__pbId__c.field-meta.xml
<CustomField>
    <fullName>pbk__pbId__c</fullName>
    <label>PitchBook ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>