force-app/main/default/objects/Account/fields/pbk__PitchBook_Industry__c.field-meta.xml
<CustomField>
    <fullName>pbk__PitchBook_Industry__c</fullName>
    <label>PB Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>