force-app/main/default/objects/Account/fields/pbk__Preferred_Company_Valuation__c.field-meta.xml
<CustomField>
    <fullName>pbk__Preferred_Company_Valuation__c</fullName>
    <label>PB Preferred Company Valuation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>