force-app/main/default/objects/Account/fields/pbk__Preferred_EBIT__c.field-meta.xml
<CustomField>
    <fullName>pbk__Preferred_EBIT__c</fullName>
    <label>PB Preferred EBIT</label>
    <length>100</length>
    <type>Text</type>
</CustomField>