force-app/main/default/objects/Account/fields/pbk__Preferred_Investment_Amount__c.field-meta.xml
<CustomField>
    <fullName>pbk__Preferred_Investment_Amount__c</fullName>
    <label>PB Preferred Investment Amount</label>
    <length>100</length>
    <type>Text</type>
</CustomField>