force-app/main/default/objects/Account/fields/pbk__Preferred_Investment_Horizon__c.field-meta.xml
<CustomField>
    <fullName>pbk__Preferred_Investment_Horizon__c</fullName>
    <label>PB Preferred Investment Horizon</label>
    <length>100</length>
    <type>Text</type>
</CustomField>