force-app/main/default/objects/Account/fields/pbk__Preferred_Revenue__c.field-meta.xml
<CustomField>
    <fullName>pbk__Preferred_Revenue__c</fullName>
    <label>PB Preferred Revenue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>