force-app/main/default/objects/Account/fields/pbk__Preferred_Verticals__c.field-meta.xml
<CustomField>
    <fullName>pbk__Preferred_Verticals__c</fullName>
    <label>PB Preferred Verticals</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>