force-app/main/default/objects/Account/fields/pbk__Primary_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>pbk__Primary_Contact_Email__c</fullName>
    <label>PB Primary Contact Email</label>
    <type>Email</type>
</CustomField>