force-app/main/default/objects/Account/fields/pbk__Primary_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>pbk__Primary_Contact_Name__c</fullName>
    <label>PB Primary Contact</label>
    <length>200</length>
    <type>Text</type>
</CustomField>