force-app/main/default/objects/Account/fields/pbk__Primary_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>pbk__Primary_Contact_Phone__c</fullName>
    <label>PB Primary Contact Phone</label>
    <type>Phone</type>
</CustomField>