force-app/main/default/objects/Account/fields/pbk__Primary_Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>pbk__Primary_Contact_Title__c</fullName>
    <label>PB Primary Contact Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>