force-app/main/default/objects/Account/fields/pbk__Primary_US_Region__c.field-meta.xml
<CustomField>
    <fullName>pbk__Primary_US_Region__c</fullName>
    <label>PB Primary US Region</label>
    <length>50</length>
    <type>Text</type>
</CustomField>