force-app/main/default/objects/Account/fields/pbk__SIC__c.field-meta.xml
<CustomField>
    <fullName>pbk__SIC__c</fullName>
    <label>PB SIC Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>