force-app/main/default/objects/Account/fields/pbk__Ticker_Symbol__c.field-meta.xml
<CustomField>
    <fullName>pbk__Ticker_Symbol__c</fullName>
    <label>PB Ticker Symbol</label>
    <length>40</length>
    <type>Text</type>
</CustomField>