force-app/main/default/objects/Account/fields/pbk__Total_Debt_FYE__c.field-meta.xml
<CustomField>
    <fullName>pbk__Total_Debt_FYE__c</fullName>
    <label>PB Total Debt (FYE)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>