force-app/main/default/objects/Account/fields/pbk__Total_Money_Raised__c.field-meta.xml
<CustomField>
    <fullName>pbk__Total_Money_Raised__c</fullName>
    <label>PB Total Money Raised</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>