force-app/main/default/objects/Account/fields/pbk__TTM_End__c.field-meta.xml
<CustomField>
    <fullName>pbk__TTM_End__c</fullName>
    <label>PB TTM End</label>
    <type>Date</type>
</CustomField>