force-app/main/default/objects/Account/fields/pbk__Verticals__c.field-meta.xml
<CustomField>
    <fullName>pbk__Verticals__c</fullName>
    <label>PB Verticals</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>