force-app/main/default/objects/Account/fields/pbk__Year_Founded__c.field-meta.xml
<CustomField>
    <fullName>pbk__Year_Founded__c</fullName>
    <label>PB Year Founded</label>
    <length>10</length>
    <type>Text</type>
</CustomField>