force-app/main/default/objects/Account/fields/POS_Partner_Code__c.field-meta.xml
<CustomField>
    <fullName>POS_Partner_Code__c</fullName>
    <label>POS Partner Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>