force-app/main/default/objects/Account/fields/POS_Portal_Submission_Existing_NPNs__c.field-meta.xml
<CustomField>
    <fullName>POS_Portal_Submission_Existing_NPNs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tracks if this NPN Account doing POS Submission (This is done until we rollout for every NPN) and their NPN_Program_Signed_Date__c &gt;= 2019-04-15. It is used in the formula field &quot;POS Portal Submission&quot; to combine the existing as well as the new ones (that gets onboarded after 2019-04-15). 
- Not to be shown in the UI</description>
    <inlineHelpText>Tracks if this NPN Account doing POS Submission (This is done until we rollout for every NPN) and their NPN_Program_Signed_Date__c &gt;= 2019-04-15</inlineHelpText>
    <label>POS Portal Submission (Existing NPNs)</label>
    <type>Checkbox</type>
</CustomField>