force-app/main/default/objects/Account/fields/POS_Reporter_ID__c.field-meta.xml
<CustomField>
    <fullName>POS_Reporter_ID__c</fullName>
    <label>POS Reporter ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>