force-app/main/default/objects/Account/fields/Product_Lines__c.field-meta.xml
<CustomField>
    <fullName>Product_Lines__c</fullName>
    <description>This field rolls up Product Lines from Entitlements.</description>
    <inlineHelpText>Product Lines based on Active Entitlements.</inlineHelpText>
    <label>Product Lines</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Line</valueSetName>
    </valueSet>
</CustomField>