force-app/main/default/objects/Account/fields/Reason_for_Rejection__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Rejection__c</fullName>
    <inlineHelpText>If you are setting the ‘Rejected’ checkbox to true then this is a required field</inlineHelpText>
    <label>Reason for Rejection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Approval Policy</fullName>
            </value>
            <value>
                <fullName>Missing/Invalid Website</fullName>
            </value>
            <value>
                <fullName>Duplicate Account</fullName>
            </value>
            <value>
                <fullName>Verify Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>